Source/WebCore/platform/graphics/FontPlatformData.cpp
@@ -58,8 +58,7 @@ FontPlatformData::FontPlatformData(CGFontRef cgFont, float size, bool syntheticB
     : FontPlatformData(size, syntheticBold, syntheticOblique, orientation, widthVariant, textRenderingMode)
 {
     m_cgFont = cgFont;
-    if (!m_cgFont)
-        setFallbackCGFont();
+    ASSERT(m_cgFont);
 }
 #endif
 
