Source/WebCore/platform/mac/DragImageMac.mm
@@ -166,6 +166,7 @@ const float DragLinkUrlFontSize = 10;
     
 static FontCascade& fontFromNSFont(NSFont *font)
 {
+    ASSERT(font);
     static NSFont *currentFont;
     static NeverDestroyed<FontCascade> currentRenderer;
     
@@ -192,6 +193,9 @@ static bool canUseFastRenderer(const UniChar* buffer, unsigned length)
     
 static float widthWithFont(NSString *string, NSFont *font)
 {
+    if (!font)
+        return 0;
+
     unsigned length = [string length];
     Vector<UniChar, 2048> buffer(length);
     
@@ -208,6 +212,9 @@ static float widthWithFont(NSString *string, NSFont *font)
     
 static void drawAtPoint(NSString *string, NSPoint point, NSFont *font, NSColor *textColor)
 {
+    if (!font)
+        return;
+
     unsigned length = [string length];
     Vector<UniChar, 2048> buffer(length);
     
@@ -228,7 +235,7 @@ static void drawAtPoint(NSString *string, NSPoint point, NSFont *font, NSColor *
         BOOL flipped = [nsContext isFlipped];
         if (!flipped)
             CGContextScaleCTM(cgContext, 1, -1);
-            
+
         FontCascade webCoreFont(FontPlatformData(toCTFont(font), [font pointSize]), Antialiased);
         TextRun run(StringView(buffer.data(), length));
 
@@ -281,6 +288,10 @@ DragImageRef createDragImageForLink(URL& url, const String& title, FontRendering
     NSFont *labelFont = [[NSFontManager sharedFontManager] convertFont:[NSFont systemFontOfSize:DragLinkLabelFontsize]
                                                            toHaveTrait:NSBoldFontMask];
     NSFont *urlFont = [NSFont systemFontOfSize:DragLinkUrlFontSize];
+
+    ASSERT(labelFont);
+    ASSERT(urlFont);
+
     NSSize labelSize;
     labelSize.width = widthWithFont(label, labelFont);
     labelSize.height = [labelFont ascender] - [labelFont descender];
@@ -322,16 +333,18 @@ DragImageRef createDragImageForLink(URL& url, const String& title, FontRendering
 
     NSColor *topColor = [NSColor colorWithDeviceWhite:0.0f alpha:0.75f];
     NSColor *bottomColor = [NSColor colorWithDeviceWhite:1.0f alpha:0.5f];
-    if (drawURLString) {
+    if (drawURLString && urlFont) {
         if (clipURLString)
             urlString = StringTruncator::centerTruncate(urlString, imageSize.width - (DragLabelBorderX * 2), fontFromNSFont(urlFont));
 
        drawDoubledAtPoint(urlString, NSMakePoint(DragLabelBorderX, DragLabelBorderY - [urlFont descender]), topColor, bottomColor, urlFont);
     }
 
-    if (clipLabelString)
-        label = StringTruncator::rightTruncate(label, imageSize.width - (DragLabelBorderX * 2), fontFromNSFont(labelFont));
-    drawDoubledAtPoint(label, NSMakePoint(DragLabelBorderX, imageSize.height - LabelBorderYOffset - [labelFont pointSize]), topColor, bottomColor, labelFont);
+    if (labelFont) {
+        if (clipLabelString)
+            label = StringTruncator::rightTruncate(label, imageSize.width - (DragLabelBorderX * 2), fontFromNSFont(labelFont));
+        drawDoubledAtPoint(label, NSMakePoint(DragLabelBorderX, imageSize.height - LabelBorderYOffset - [labelFont pointSize]), topColor, bottomColor, labelFont);
+    }
 
     [dragImage unlockFocus];
 
