Source/WebKit/mac/Misc/WebStringTruncator.mm
@@ -59,21 +59,35 @@ static WebCore::FontCascade& fontFromNSFont(NSFont *font)
 + (NSString *)centerTruncateString:(NSString *)string toWidth:(float)maxWidth
 {
     static NeverDestroyed<RetainPtr<NSFont>> menuFont = [NSFont menuFontOfSize:0];
+
+    ASSERT(menuFont.get());
+    if (!menuFont.get())
+        return nil;
+
     return WebCore::StringTruncator::centerTruncate(string, maxWidth, fontFromNSFont(menuFont.get().get()));
 }
 
 + (NSString *)centerTruncateString:(NSString *)string toWidth:(float)maxWidth withFont:(NSFont *)font
 {
+    if (!font)
+        return nil;
+
     return WebCore::StringTruncator::centerTruncate(string, maxWidth, fontFromNSFont(font));
 }
 
 + (NSString *)rightTruncateString:(NSString *)string toWidth:(float)maxWidth withFont:(NSFont *)font
 {
+    if (!font)
+        return nil;
+
     return WebCore::StringTruncator::rightTruncate(string, maxWidth, fontFromNSFont(font));
 }
 
 + (float)widthOfString:(NSString *)string font:(NSFont *)font
 {
+    if (!font)
+        return 0;
+
     return WebCore::StringTruncator::width(string, fontFromNSFont(font));
 }
 
